src/objects/EarnedValueSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>AcctBurdenedCost__c</fullName>
        <label>Acct Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctRawCost__c</fullName>
        <label>Acct Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AsOfDate__c</fullName>
        <label>As Of Date (DEPRECATED)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompositeKey__c</fullName>
        <description>This should be Project Task Id + Week Number</description>
        <externalId>true</externalId>
        <label>Composite Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectFunctionalBurdenedCost__c</fullName>
        <label>Project Functional Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLFringe__c</fullName>
        <label>Project Functional Raw Cost Fringe (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLLabor__c</fullName>
        <label>Project Functional Raw Cost Labor (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLODCEXPS__c</fullName>
        <label>Project Functional Raw Cost ODC EXP (PL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLODCSUBS__c</fullName>
        <label>ProjectFunctionalRawCostPLODCSUBS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostPLOverhead__c</fullName>
        <label>ProjectFunctionalRawCostPLOverhead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostResourceLabor__c</fullName>
        <label>ProjectFunctionalRawCostResourceLabor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCostResourceNonLabor__c</fullName>
        <label>ProjectFunctionalRawCostResourceNonLabor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCost__c</fullName>
        <label>Project Functional Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectHours__c</fullName>
        <label>Project Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Earned Value Snapshots</relationshipLabel>
        <relationshipName>EarnedValueSnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RevenueCummulative__c</fullName>
        <label>Revenue Cummulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SnapshotKey__c</fullName>
        <externalId>true</externalId>
        <label>Snapshot Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ThisWeekAmountCumulativeEst__c</fullName>
        <label>This Week Amount Cumulative (Est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThisWeekAmountEst__c</fullName>
        <label>This Week Amount (Est)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThisWeekAmount__c</fullName>
        <label>This Week Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThisWeekNumber__c</fullName>
        <label>This Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThisWeekRunningTotalAmount__c</fullName>
        <label>This Week Running Total Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThisWeekTotalRemaining__c</fullName>
        <label>This Week Total Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeekStartDate__c</fullName>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WeeklyRollupEntry__c</fullName>
        <label>Weekly Rollup Entry</label>
        <referenceTo>WeeklyRollupEntry__c</referenceTo>
        <relationshipLabel>Earned Value Snapshots</relationshipLabel>
        <relationshipName>Earned_Value_Snapshots</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Earned Value Snapshot</label>
    <nameField>
        <displayFormat>EVS-{00000000}</displayFormat>
        <label>Earned Value Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Earned Value Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>